自己紹介サイト（改良版）

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     
 
       <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" src="file:///Users/tomnohara/Desktop/codebase/bootstrap/selfproduce/img/my-avatar.jpg" alt="">
+      <img class="masthead-avatar mb-5" src="img/my-avatar.jpg" alt="">
 
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-uppercase mb-0">NAME:野原幹永</h1>
@@ -99,7 +99,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="file:///Users/tomnohara/Desktop/codebase/bootstrap/selfproduce/img/baseball_batter.png" alt="">
+            <img class="img-fluid" src="img/baseball_batter.png" alt="">
           </div>
         </div>
 
@@ -111,7 +111,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="file:///Users/tomnohara/Desktop/codebase/bootstrap/selfproduce/img/game_controller.png" alt="">
+            <img class="img-fluid" src="img/game_controller.png" alt="">
           </div>
         </div>
 
@@ -123,7 +123,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="file:///Users/tomnohara/Desktop/codebase/bootstrap/selfproduce/img/cat.png" alt="">
+            <img class="img-fluid" src="img/cat.png" alt="">
           </div>
         </div>
         <!-- Portfolio Item 4 -->
@@ -315,7 +315,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="file:///Users/tomnohara/Desktop/codebase/bootstrap/selfproduce/img/my-picture.jpeg" alt="">
+                <img class="img-fluid rounded mb-5" src="img/my-picture.jpeg" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">高校生まで野球部を続けていて、今でも趣味で草野球をやっています。</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
